# yafi

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: setup.ps1  setup.sh
yafi/: dashboard.py  data_analysis.py  decos.py  interface.py  query_machine.py  ticker_time.py
yafi/configs/: industry_query.json  query_config.json
yafi/tests/: test_dashboard.py  test_interface.py
